--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: Dewi - v2.1.0
-* Template URL: https://bootstrapmade.com/dewi-free-multi-purpose-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -120,7 +113,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header.header-scrolled, #header.header-inner-pages {
-  background: rgba(21, 34, 43, 0.85);
+  background: rgba(40, 51, 145, 0.272);
   padding: 12px 0;
 }
 
@@ -144,6 +137,10 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 992px) {
   #header {
     padding: 12px 0;
+  }
+  #header .logo {
+    margin: auto 0;
+    font-size: 22px;
   }
 }
 
@@ -425,7 +422,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(13, 20, 26, 0.7);
+  background: rgba(203, 214, 241, 0.7);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -452,11 +449,11 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   line-height: 56px;
   text-transform: uppercase;
-  color: #fff;
+  color: #223275;
 }
 
 #hero h2 {
-  color: #eee;
+  color: #26377f;
   margin-bottom: 50px;
   font-size: 24px;
 }
